# auto_regressive_weekly

./: .gitignore  MLproject  Makefile  README.md  main.py  model.py  predict.py  pyproject.toml  train.py
.github/workflows/: checks.yml
configs/: example.yaml
input/: trainData.csv
scripts/: export_weights.py  verify_eval.py
tests/: test_eval.py  test_predict.py
